--- a/tr.html
+++ b/tr.html
@@ -48,7 +48,7 @@
                 <a class="nav-link text-light navbarbutton" href="#Contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a href="img/CURRICULUM VITAE_CV_ALEXIS LEBORGNE_Français_2024.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-light">Devis gratuit</button></a>
+                <a href="img/CURRICULUM VITAE_CV_ALEXIS LEBORGNE_Français_2024.pdf" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-light">Fiyat alın</button></a>
               </li>
             </ul>
             <div class="dropdown">
