--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 FR
               </button>
               <ul class="dropdown-menu dropdown-sm bg-dark dropdown-menu-end">
-                <li><a class="dropdown-item text-light" href="./en.html"><p class="dropdowntxt">EN <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./en"><p class="dropdowntxt">EN <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
                 <li><a class="dropdown-item text-light" href="#"><p class="dropdowntxt">FR <img src="./img/fr.svg" alt="Français" height="18"></p></a></li>
                 <li><a class="dropdown-item text-light" href="./tr"><p class="dropdowntxt">TR <img src="./img/tr.svg" alt="Turc" height="18"></p></a></li>
               </ul>
