--- a/en.html
+++ b/en.html
@@ -57,7 +57,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">EN</a></li>
-                <li><a class="dropdown-item" href="./index.html">FR</a></li>
+                <li><a class="dropdown-item" href="www.alotrad.com">FR</a></li>
                 <li><a class="dropdown-item" href="./tr.html">TR</a></li>
               </ul>
             </div>
