--- a/en.html
+++ b/en.html
@@ -58,7 +58,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">EN</a></li>
                 <li><a class="dropdown-item" href="www.alotrad.com">FR</a></li>
-                <li><a class="dropdown-item" href="./tr.html">TR</a></li>
+                <li><a class="dropdown-item" href="./tr">TR</a></li>
               </ul>
             </div>
           </div>
