--- a/tr.html
+++ b/tr.html
@@ -56,7 +56,7 @@
                 TR
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="./en.html">EN</a></li>
+                <li><a class="dropdown-item" href="./en">EN</a></li>
                 <li><a class="dropdown-item" href="www.alotrad.com">FR</a></li>
                 <li><a class="dropdown-item" href="#">TR</a></li>
               </ul>
