--- a/en.html
+++ b/en.html
@@ -48,9 +48,9 @@
                 FR
               </button>
               <ul class="dropdown-menu dropdown-sm bg-dark dropdown-menu-end">
-                <li><a class="dropdown-item text-light" href="./en"><p class="dropdowntxt">EN <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="#"><p class="dropdowntxt">FR <img src="./img/fr.svg" alt="Français" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="./tr"><p class="dropdowntxt">TR <img src="./img/tr.svg" alt="Turc" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./en.html"><p class="dropdowntxt">EN <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./fr.html"><p class="dropdowntxt">FR <img src="./img/fr.svg" alt="Français" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./tr.html"><p class="dropdowntxt">TR <img src="./img/tr.svg" alt="Turc" height="18"></p></a></li>
               </ul>
             </div>
           </div>
