--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 fr
               </button>
               <ul class="dropdown-menu dropdown-sm bg-dark dropdown-menu-end">
-                <li><a class="dropdown-item text-light" href="./en.html"><p class="dropdowntxt">en <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="./fr.html"><p class="dropdowntxt">fr <img src="./img/fr.svg" alt="Français" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="./tr.html"><p class="dropdowntxt">tr <img src="./img/tr.svg" alt="Turc" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./en"><p class="dropdowntxt">en <img src="./img/gb.svg" alt="Anglais" width="4" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./fr"><p class="dropdowntxt">fr <img src="./img/fr.svg" alt="Français" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./tr"><p class="dropdowntxt">tr <img src="./img/tr.svg" alt="Turc" height="18"></p></a></li>
               </ul>
             </div>
           </div>
