--- a/tr.html
+++ b/tr.html
@@ -43,9 +43,9 @@
             <div class="dropdown">
               <button class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"> tr </button>
               <ul class="dropdown-menu dropdown-sm bg-dark dropdown-menu-end">
-                <li><a class="dropdown-item text-light" href="./en.html"><p class="dropdowntxt">en <img src="./img/gb.svg" alt="İngilizce" width="4" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="./fr.html"><p class="dropdowntxt">fr <img src="./img/fr.svg" alt="Fransızca" height="18"></p></a></li>
-                <li><a class="dropdown-item text-light" href="./tr.html"><p class="dropdowntxt">tr <img src="./img/tr.svg" alt="Türkçe" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./en"><p class="dropdowntxt">en <img src="./img/gb.svg" alt="İngilizce" width="4" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./fr"><p class="dropdowntxt">fr <img src="./img/fr.svg" alt="Fransızca" height="18"></p></a></li>
+                <li><a class="dropdown-item text-light" href="./tr"><p class="dropdowntxt">tr <img src="./img/tr.svg" alt="Türkçe" height="18"></p></a></li>
               </ul>
             </div>
           </div>
