--- a/en.html
+++ b/en.html
@@ -31,7 +31,7 @@
                 <a class="nav-link text-light navbarbutton" href="#Services"><p class="phover">Services</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light navbarbutton" href="#La team"><p class="phover">CV</p></a>
+                <a class="nav-link text-light navbarbutton" href="#CV"><p class="phover">CV</p></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light navbarbutton" href="#Contact"><p class="phover">Contact</p></a>
@@ -180,7 +180,7 @@
 
     <div class="entrimage2"></div>
 
-    <div id="La team" class="divavanttitre datCV"></div>
+    <div id="CV" class="divavanttitre datCV"></div>
     
     <div class="container border border-0 border-warning mt-4 p-3 w-100">
         
