--- a/en.html
+++ b/en.html
@@ -156,14 +156,14 @@
                 
                 We advise you to <strong>check</strong> which requirement corresponds to your situation with <a class="aBlack" href="https://diplomatie.belgium.be/en/legalisation-documents" target="_blank">the relevant SPF Foreign Affairs department</a>.<br><br>
 
-                AlöTrad can take care of legalising or having legalised your translations <strong>only if they have been done by us.</strong>.
+                AlöTrad can take care of legalising or having legalised your translations <strong>only if they have been carried out by us</strong>.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Traduction simple
+                Simple translation
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
